# dev

./: README.md
ai_serv/: .gitignore  Btrade.py  EllipticCurve.py  G.py  Juejin.py  KData.py  Sol.py  backtraderTest.py  main.py  s1.csv  s2.csv  web3Test.py  windowTest.py
ai_serv/bak/: tqtest.py  windowTest.py
ai_serv/data/: init.sh
ai_serv/spider/: browser.py  items.py  mainspider.py  middlewares.py  pipelines.py  settings.py
game_serv/: go.mod  go.sum  main.go
game_serv/base/: skeleton.go
game_serv/cmd/: chat.go  play.go  web.go
game_serv/conf/: conf.go
game_serv/controller/: api.go
game_serv/game/: external.go
game_serv/gate/: external.go  router.go
game_serv/login/: external.go
game_serv/msg/: models.go  msg.go
game_serv/test/: go.mod  go.sum  main.go  start.cmd
game_serv/tools/: tools.go
imagesbed/admin/: index.php
imagesbed/api/: public.php
imagesbed/config/: config.php
jk_serv/: CMakeLists.txt  jk.cpp  jk.sln  jk.vcxproj  jk.vcxproj.filters
jk_serv/include/httplib/: httplib.cc
jk_serv/include/queen/: queen.cpp  queen.h
jk_serv/x64/Release/: jk.exe.recipe  jk.iobj  jk.ipdb  jk.vcxproj.FileListAbsolute.txt
jk_serv/x64/Release/jk.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  jk.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
leaf_serv/: cache.go  go.mod  go.sum  test.go  web.go
plugin/vpn/: vpn.sh
scripts/: HikyuuTDX.lnk  client.ovpn  etc.lnk  go编译运行.lnk  jupyter启动.bat  nginx启动.cmd  php.cmd  php.vbs  php启动.cmd  vbs模板.vbs  wuzhen.cmd  wuzhen.vbs
(+43 files in other folders)
